code/tui/src/app/snapshots/app__marketplace_tests__mcp_chinese_servers_inline.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
                                                                                                    
    ▄  ▄     Ash Code v0.1.0                                                                        
  ▗█▛██▜█▖   Automatic model                                                                        
  ▝▜████▛▘   .                                                                                      
    ▝  ▘                                                                                            
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ 扩 展  ─────────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   技 能     扩 展 市 场     MCP    钩 子     插 件                                                           
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ 搜 索  MCP 服 务 器                                                                               │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
> Documentation                                                                                  +  
                                                                                                    
  Enter/Space 切 换  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭
