code/tui/src/app/snapshots/app__marketplace_tests__skills_chinese_collapsed.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 扩 展  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   技 能     扩 展 市 场     MCP    钩 子     插 件                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 可 用 技 能                                                        │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> skills                                                               + │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter/Space 切 换  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭            │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型
