code/tui/src/app/snapshots/app__marketplace_tests__skills_chinese_marketplace_entry.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 技 能  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   全 部  (1)    已 启 用  (1)    已 停 用  (0)    管 理                           │             
            │                                                                         │             
            │  获 取 技 能                                                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 可 用 技 能                                                        │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> skills  ·  已 启 用   ·  用 户   ·  user:skill-source:personal  ·  Availabl │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter/Space 切 换   ·  Tab/Shift+Tab 切 换   ·  / 搜 索   ·  Esc 关 闭         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型
