code/tui/src/app/snapshots/app__marketplace_tests__skills_empty_panel.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Skills ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   All (0)    On (0)    Off (0)                                          │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search available skills                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  No matching skills                                                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter/Space toggle · Tab tabs · / search · Esc close                   │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
