code/tui/src/app/snapshots/app__marketplace_tests__skills_marketplace_entry.snap
---
source: code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Skills ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   All (0)    Enabled (0)    Disabled (0)    Manage                      │             
            │                                                                         │             
            │  Get skills                                                             │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search available skills                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  No matching skills                                                     │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter/Space to toggle · Tab/Shift+Tab to switch · Esc to close         │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model
